# AI-Career-to-Project-Orchestrator

./: README  README.md  docker-compose.yml  pyproject.toml  test_graph.py
apps/: GUIDE.md
apps/api/: Dockerfile  __init__.py  main.py
apps/web/: package-lock.json  package.json
apps/web/src/: App.tsx
apps/web/src/components/: AnalyzeForm.tsx  JDInputItem.tsx  JDInputList.tsx  ResumeInput.tsx
apps/web/src/lib/: api.ts
apps/web/src/types/: index.ts
career-orchestrator/: README.md  pyproject.toml  test_graph.py
career-orchestrator/apps/api/: Dockerfile  main.py
career-orchestrator/data/samples/: resume_1.txt
data/samples/: jd_1.txt  jd_2.txt  resume_1.txt  resume_2.txt  resume_test_case.txt
